--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_database: ^10.1.0
   firebase_auth: ^4.4.0
+  google_sign_in: ^6.1.0
   
 
 dev_dependencies:
