--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_database: ^10.1.0
   firebase_auth: ^4.4.0
   google_sign_in: ^6.1.0
+  cloud_firestore: ^4.5.0
   
 
 dev_dependencies:
